--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   circular_countdown_timer: ^0.2.3
+  flutter_time_picker_spinner: ^2.0.0
+  numberpicker: ^2.1.2
 
 dev_dependencies:
   flutter_test:
